--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -15,7 +15,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "8763a949ed54439592257c018cfcc236": {
+        "5eb88c2854a241d3b978ed9e0265bf56": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -30,14 +30,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_3ea50f3697ad40e492aea32b2542ee4b",
-              "IPY_MODEL_967153217d6a4026b3a160e99905847c",
-              "IPY_MODEL_add96c54ec7f4d728fe677bacbb870ff"
+              "IPY_MODEL_c11dd8b1069e4481909f8af024e1e115",
+              "IPY_MODEL_612963257c9e47a8bff6cdeb6d444bec",
+              "IPY_MODEL_dde3604bfa8f4be48d1b0423f77436f7"
             ],
-            "layout": "IPY_MODEL_08c437a67004425aa20f35011f5a017a"
+            "layout": "IPY_MODEL_4ef05d6e40ca46b598008194f07f8d0f"
           }
         },
-        "3ea50f3697ad40e492aea32b2542ee4b": {
+        "c11dd8b1069e4481909f8af024e1e115": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -52,13 +52,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_470d9c9ddce1424ab49b09ed108446cc",
+            "layout": "IPY_MODEL_878f1147bb2e4ebd96352b5f9216279c",
             "placeholder": "​",
-            "style": "IPY_MODEL_7edcbdaff9d14effa0e7d4e5aaf4dfe1",
+            "style": "IPY_MODEL_21962e019e2641a79ad5baa9ca01f873",
             "value": "100%"
           }
         },
-        "967153217d6a4026b3a160e99905847c": {
+        "612963257c9e47a8bff6cdeb6d444bec": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -74,15 +74,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_3c85e1385cc3460b9e55734870207373",
+            "layout": "IPY_MODEL_6356ae9c81264dbc92f9418e50082caf",
             "max": 2,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_d933efb4dc5746fa8bdf991e0cbf99dd",
+            "style": "IPY_MODEL_e1d2411db8df404eac6a2e5113d78306",
             "value": 2
           }
         },
-        "add96c54ec7f4d728fe677bacbb870ff": {
+        "dde3604bfa8f4be48d1b0423f77436f7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -97,13 +97,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_b1eb34b2c1b94b9f99123576a472f589",
+            "layout": "IPY_MODEL_eeb2d67a60484129ba35d7961f0c8dde",
             "placeholder": "​",
-            "style": "IPY_MODEL_721189ea2dd74a0a8a469920f8271334",
-            "value": " 2/2 [00:00&lt;00:00, 70.38it/s]"
+            "style": "IPY_MODEL_3d9e48a7fe4744c4aa3ae64cdb9a63b4",
+            "value": " 2/2 [00:00&lt;00:00, 63.12it/s]"
           }
         },
-        "08c437a67004425aa20f35011f5a017a": {
+        "4ef05d6e40ca46b598008194f07f8d0f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -155,7 +155,7 @@
             "width": null
           }
         },
-        "470d9c9ddce1424ab49b09ed108446cc": {
+        "878f1147bb2e4ebd96352b5f9216279c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -207,7 +207,7 @@
             "width": null
           }
         },
-        "7edcbdaff9d14effa0e7d4e5aaf4dfe1": {
+        "21962e019e2641a79ad5baa9ca01f873": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -222,7 +222,7 @@
             "description_width": ""
           }
         },
-        "3c85e1385cc3460b9e55734870207373": {
+        "6356ae9c81264dbc92f9418e50082caf": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -274,7 +274,7 @@
             "width": null
           }
         },
-        "d933efb4dc5746fa8bdf991e0cbf99dd": {
+        "e1d2411db8df404eac6a2e5113d78306": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -290,7 +290,7 @@
             "description_width": ""
           }
         },
-        "b1eb34b2c1b94b9f99123576a472f589": {
+        "eeb2d67a60484129ba35d7961f0c8dde": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -342,7 +342,7 @@
             "width": null
           }
         },
-        "721189ea2dd74a0a8a469920f8271334": {
+        "3d9e48a7fe4744c4aa3ae64cdb9a63b4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -357,7 +357,7 @@
             "description_width": ""
           }
         },
-        "a47eedd916ab46a4b7e257e6da9c6fbc": {
+        "de68314c6d1947f690be647aa9b62d72": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -372,14 +372,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_e93dae8926a1489c9d40fc48b0fc9cda",
-              "IPY_MODEL_0a90b66b36ca4ffcaa313251405aab04",
-              "IPY_MODEL_e537f85583aa48f4af04d8783f841c05"
+              "IPY_MODEL_cf15c3d23f9e432c8ee46375004b67ee",
+              "IPY_MODEL_743aff4d33aa489db8ef52375c537000",
+              "IPY_MODEL_fd2765bd09774c38bc00c72acdb34810"
             ],
-            "layout": "IPY_MODEL_619a89cc786240f2bde386d2a78da693"
+            "layout": "IPY_MODEL_d4e0ec99454c43c9b83f38c302c4fd2f"
           }
         },
-        "e93dae8926a1489c9d40fc48b0fc9cda": {
+        "cf15c3d23f9e432c8ee46375004b67ee": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -394,13 +394,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_c1130daa4fe542a7860c84c2148fac2d",
+            "layout": "IPY_MODEL_fe94b910348b40bd9672a92e09bcca84",
             "placeholder": "​",
-            "style": "IPY_MODEL_ebb4f358f9684356a1bb940559857730",
+            "style": "IPY_MODEL_f591734c43e541579e59a9652842d131",
             "value": "100%"
           }
         },
-        "0a90b66b36ca4ffcaa313251405aab04": {
+        "743aff4d33aa489db8ef52375c537000": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -416,15 +416,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_1423621e0f4d49adabd9fbcab765f0a8",
+            "layout": "IPY_MODEL_7652a67b0da1426aa0e420b2c8b0fb90",
             "max": 2,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_6f1d662a2a9c40f7ac9388278d02be85",
+            "style": "IPY_MODEL_c5e24ef4aff54969843383ebcbf72c5b",
             "value": 2
           }
         },
-        "e537f85583aa48f4af04d8783f841c05": {
+        "fd2765bd09774c38bc00c72acdb34810": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -439,13 +439,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_a68349d66fed4b2abec9d3f58e4c9493",
+            "layout": "IPY_MODEL_9e66f57f3b1948118601dc128218a6ab",
             "placeholder": "​",
-            "style": "IPY_MODEL_6f790ccff3f44f01b11f630f70f3e0b6",
-            "value": " 2/2 [00:00&lt;00:00, 29.32it/s]"
+            "style": "IPY_MODEL_0c40c6d7abc54ed68ba348a6ac3af748",
+            "value": " 2/2 [00:00&lt;00:00, 50.67it/s]"
           }
         },
-        "619a89cc786240f2bde386d2a78da693": {
+        "d4e0ec99454c43c9b83f38c302c4fd2f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -497,7 +497,7 @@
             "width": null
           }
         },
-        "c1130daa4fe542a7860c84c2148fac2d": {
+        "fe94b910348b40bd9672a92e09bcca84": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -549,7 +549,7 @@
             "width": null
           }
         },
-        "ebb4f358f9684356a1bb940559857730": {
+        "f591734c43e541579e59a9652842d131": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -564,7 +564,7 @@
             "description_width": ""
           }
         },
-        "1423621e0f4d49adabd9fbcab765f0a8": {
+        "7652a67b0da1426aa0e420b2c8b0fb90": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -616,7 +616,7 @@
             "width": null
           }
         },
-        "6f1d662a2a9c40f7ac9388278d02be85": {
+        "c5e24ef4aff54969843383ebcbf72c5b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -632,7 +632,7 @@
             "description_width": ""
           }
         },
-        "a68349d66fed4b2abec9d3f58e4c9493": {
+        "9e66f57f3b1948118601dc128218a6ab": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -684,7 +684,7 @@
             "width": null
           }
         },
-        "6f790ccff3f44f01b11f630f70f3e0b6": {
+        "0c40c6d7abc54ed68ba348a6ac3af748": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -838,9 +838,9 @@
         "import torch.nn as nn\n",
         "import numpy as np\n",
         "from torch.utils.data import DataLoader\n",
-        "from tqdm import tqdm_notebook\n"
+        "import tqdm\n"
       ],
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -854,15 +854,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d9be13e-c4a9-4db8-a1a7-2f3af90786c9"
+        "outputId": "049e529e-a828-4d8b-f2c6-779269f67836"
       },
-      "execution_count": 4,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Jun  3 22:14:48 2022       \n",
+            "Fri Jun  3 23:14:49 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -871,7 +871,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   34C    P0    26W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "| N/A   34C    P0    26W / 250W |      2MiB / 16280MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -901,9 +901,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3693bb3d-be0f-42b2-8f2a-81b56c48fbe5"
+        "outputId": "1d51debe-de1f-445a-8601-7f5dc8a27e27"
       },
-      "execution_count": 5,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +944,7 @@
         "        cls = 101\n",
         "        inputs = torch.tensor([])\n",
         "\n",
-        "        for text in tqdm_notebook(texts):\n",
+        "        for text in tqdm.notebook.tqdm(texts):\n",
         "          tokens = tokenize(text, tokenizer)\n",
         "          tokens = [cls] + tokens\n",
         "          tokens = torch.FloatTensor(tokens)\n",
@@ -965,7 +965,7 @@
         "    def __getitem__(self, idx):\n",
         "        return self.inputs[idx], self.targets[idx]"
       ],
-      "execution_count": 34,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1010,34 +1010,25 @@
         "id": "8r7jBFFUeApe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136,
+          "height": 84,
           "referenced_widgets": [
-            "8763a949ed54439592257c018cfcc236",
-            "3ea50f3697ad40e492aea32b2542ee4b",
-            "967153217d6a4026b3a160e99905847c",
-            "add96c54ec7f4d728fe677bacbb870ff",
-            "08c437a67004425aa20f35011f5a017a",
-            "470d9c9ddce1424ab49b09ed108446cc",
-            "7edcbdaff9d14effa0e7d4e5aaf4dfe1",
-            "3c85e1385cc3460b9e55734870207373",
-            "d933efb4dc5746fa8bdf991e0cbf99dd",
-            "b1eb34b2c1b94b9f99123576a472f589",
-            "721189ea2dd74a0a8a469920f8271334"
+            "5eb88c2854a241d3b978ed9e0265bf56",
+            "c11dd8b1069e4481909f8af024e1e115",
+            "612963257c9e47a8bff6cdeb6d444bec",
+            "dde3604bfa8f4be48d1b0423f77436f7",
+            "4ef05d6e40ca46b598008194f07f8d0f",
+            "878f1147bb2e4ebd96352b5f9216279c",
+            "21962e019e2641a79ad5baa9ca01f873",
+            "6356ae9c81264dbc92f9418e50082caf",
+            "e1d2411db8df404eac6a2e5113d78306",
+            "eeb2d67a60484129ba35d7961f0c8dde",
+            "3d9e48a7fe4744c4aa3ae64cdb9a63b4"
           ]
         },
-        "outputId": "27efbeab-3601-4f5d-ae9b-1f07f5cdbcd0"
+        "outputId": "5df1fb9f-39e4-4c93-a722-b753b55fde3f"
       },
-      "execution_count": 35,
+      "execution_count": 45,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:16: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-            "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-            "  app.launch_new_instance()\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1047,7 +1038,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "8763a949ed54439592257c018cfcc236"
+              "model_id": "5eb88c2854a241d3b978ed9e0265bf56"
             }
           },
           "metadata": {}
@@ -1081,37 +1072,28 @@
         "print(first_batch_target)"
       ],
       "metadata": {
-        "id": "hV8mOhS90Mdt",
-        "outputId": "d2a84bcf-39e1-40ff-a171-c6b38dd63407",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309,
+          "height": 257,
           "referenced_widgets": [
-            "a47eedd916ab46a4b7e257e6da9c6fbc",
-            "e93dae8926a1489c9d40fc48b0fc9cda",
-            "0a90b66b36ca4ffcaa313251405aab04",
-            "e537f85583aa48f4af04d8783f841c05",
-            "619a89cc786240f2bde386d2a78da693",
-            "c1130daa4fe542a7860c84c2148fac2d",
-            "ebb4f358f9684356a1bb940559857730",
-            "1423621e0f4d49adabd9fbcab765f0a8",
-            "6f1d662a2a9c40f7ac9388278d02be85",
-            "a68349d66fed4b2abec9d3f58e4c9493",
-            "6f790ccff3f44f01b11f630f70f3e0b6"
-          ]
-        }
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:16: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-            "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-            "  app.launch_new_instance()\n"
+            "de68314c6d1947f690be647aa9b62d72",
+            "cf15c3d23f9e432c8ee46375004b67ee",
+            "743aff4d33aa489db8ef52375c537000",
+            "fd2765bd09774c38bc00c72acdb34810",
+            "d4e0ec99454c43c9b83f38c302c4fd2f",
+            "fe94b910348b40bd9672a92e09bcca84",
+            "f591734c43e541579e59a9652842d131",
+            "7652a67b0da1426aa0e420b2c8b0fb90",
+            "c5e24ef4aff54969843383ebcbf72c5b",
+            "9e66f57f3b1948118601dc128218a6ab",
+            "0c40c6d7abc54ed68ba348a6ac3af748"
           ]
         },
+        "id": "hV8mOhS90Mdt",
+        "outputId": "c38a361a-7e24-4494-98e9-001953717345"
+      },
+      "execution_count": 46,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
@@ -1121,7 +1103,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "a47eedd916ab46a4b7e257e6da9c6fbc"
+              "model_id": "de68314c6d1947f690be647aa9b62d72"
             }
           },
           "metadata": {}
