--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -4084,7 +4084,6 @@
       ],
       "metadata": {
         "id": "gxa_4gmiA-wE",
-        "outputId": "97467764-24e8-40bd-c074-2f31077605a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 148,
@@ -4123,7 +4122,8 @@
             "ebaac15e2f7345a494f771e511abfca8",
             "15033389acad40a4bc8c7fbea41e2e2c"
           ]
-        }
+        },
+        "outputId": "97467764-24e8-40bd-c074-2f31077605a1"
       },
       "execution_count": 10,
       "outputs": [
@@ -4188,10 +4188,10 @@
       ],
       "metadata": {
         "id": "KCSGJ5m7py4c",
-        "outputId": "1d37ac67-7b07-4974-a5b7-f120a92b0d96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1d37ac67-7b07-4974-a5b7-f120a92b0d96"
       },
       "execution_count": 11,
       "outputs": [
@@ -4227,30 +4227,24 @@
         "        \"\"\"\n",
         "        super(LanguageModel, self).__init__()\n",
         "\n",
-        "        self.vocab_size = vocab_size\n",
-        "        self.max_seq_length = max_seq_length\n",
-        "        self.dim = dim\n",
+        "        self.V = vocab_size\n",
+        "        self.L = max_seq_length\n",
+        "        self.D = dim\n",
         "        self.n_layers = n_layers\n",
         "        self.pad = pad_token_id\n",
         "\n",
         "        n_linear_1 = 128\n",
         "        n_linear_2 = 64\n",
         "\n",
+        "        self.embedding = torch.nn.Embedding(vocab_size, dim, device=device)\n",
+        "        #self.positional = torch.nn.Embedding(max_seq_length, dim, device=device)\n",
         "        \n",
-        "        self.embedding = nn.Sequential(OrderedDict([\n",
-        "                          ('vocab_embedding', torch.nn.Embedding(vocab_size, dim, device=device)),\n",
-        "                          ('positional_embedding', torch.nn.Embedding(max_seq_length, dim))\n",
-        "        ]))\n",
+        "        self.wq = nn.Linear(dim, dim, bias = False)\n",
+        "        self.wk = nn.Linear(dim, dim, bias = False)\n",
+        "        self.wv = nn.Linear(dim, dim, bias = False)\n",
+        "        self.wo = nn.Linear(dim, dim, bias = False)\n",
         "\n",
-        "        self.attention_layer = nn.Sequential(OrderedDict([\n",
-        "                                ('wq', nn.Linear(dim, dim, bias = False)),\n",
-        "                                ('wk', nn.Linear(dim, dim, bias = False)),\n",
-        "                                ('wv', nn.Linear(dim, dim, bias = False)),\n",
-        "                                ('wo', nn.Linear(dim, dim, bias = False))\n",
-        "                                ## Add and Normalize\n",
-        "        ]))\n",
-        "\n",
-        "        self.linear_layer = nn.Sequential(OrderedDict([\n",
+        "        self.linear = nn.Sequential(OrderedDict([\n",
         "                              ('l1', torch.nn.Linear(dim, n_linear_2, device=device)),\n",
         "                              ('relu', torch.nn.ReLU()),\n",
         "                              ('dropout', torch.nn.Dropout(p=0.20)),\n",
@@ -4265,7 +4259,19 @@
         "        Returns:\n",
         "            logits of shape (batch_size, max_seq_length, vocab_size)\n",
         "        \"\"\"\n",
+        "        X = self.embedding(inputs)\n",
+        "        #positional\n",
+        "        Q = self.wq(X)\n",
+        "        K = self.wk(X)\n",
+        "        V = self.wv(X)\n",
+        "\n",
+        "        scores = torch.matmul(Q, torch.t(K))\n",
+        "        #mask scores\n",
+        "        probs = torch.nn.functional.softmax(scores, dim=0)\n",
+        "        E = torch.matmul(probs, V)\n",
+        "        E = self.wo(E)\n",
         "        \n",
+        "\n",
         "\n",
         "\n",
         "        return"
