--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -4265,18 +4265,16 @@
         "        K = self.wk(X)\n",
         "        V = self.wv(X)\n",
         "\n",
-        "        scores = torch.matmul(Q, torch.t(K))\n",
+        "        scores = torch.matmul(Q, K.permute(0, 2, 1))\n",
         "        #mask scores\n",
         "        probs = torch.nn.functional.softmax(scores, dim=0)\n",
         "        E = torch.matmul(probs, V)\n",
         "        E = self.wo(E)\n",
-        "        \n",
+        "        out = self.linear(E)\n",
         "\n",
-        "\n",
-        "\n",
-        "        return"
+        "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -4291,7 +4289,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RwnxfZlrZoT_"
+        "id": "RwnxfZlrZoT_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a45c4822-c6ed-4aeb-98e2-162039b77b4d"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -4308,20 +4310,41 @@
         "print(f'sample_input.shape: {sample_input.shape}')\n",
         "print(f'sample_output.shape: {sample_output.shape}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sample_input.shape: torch.Size([1, 9])\n",
+            "sample_output.shape: torch.Size([1, 9, 29794])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I3Vh6B-VkA01"
+        "id": "I3Vh6B-VkA01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5557ae3-f538-45a9-d093-f668bddf7e72"
       },
       "source": [
         "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "print(f'Number of model parameters: {num_params}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of model parameters: 3834176\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4374,10 +4397,24 @@
         "print('Passou o no assert da perplexidade')"
       ],
       "metadata": {
-        "id": "gbMP8VAUncfX"
+        "id": "gbMP8VAUncfX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3fc1363-a707-4f03-85e5-b75b44b1f6b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my perplexity:              29902\n",
+            "correct initial perplexity: 29794\n",
+            "Passou o no assert da perplexidade\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
