--- a/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template.ipynb
@@ -4231,7 +4231,7 @@
         "        self.L = max_seq_length\n",
         "        self.D = dim\n",
         "        self.n_layers = n_layers\n",
-        "        self.pad = pad_token_id\n",
+        "        self.pad_token_id = pad_token_id\n",
         "\n",
         "        n_linear_1 = 128\n",
         "        n_linear_2 = 64\n",
@@ -4239,10 +4239,10 @@
         "        self.embedding = torch.nn.Embedding(vocab_size, dim, device=device)\n",
         "        #self.positional = torch.nn.Embedding(max_seq_length, dim, device=device)\n",
         "        \n",
-        "        self.wq = nn.Linear(dim, dim, bias = False)\n",
-        "        self.wk = nn.Linear(dim, dim, bias = False)\n",
-        "        self.wv = nn.Linear(dim, dim, bias = False)\n",
-        "        self.wo = nn.Linear(dim, dim, bias = False)\n",
+        "        self.wq = nn.Linear(dim, dim, bias = False, device=device)\n",
+        "        self.wk = nn.Linear(dim, dim, bias = False, device=device)\n",
+        "        self.wv = nn.Linear(dim, dim, bias = False, device=device)\n",
+        "        self.wo = nn.Linear(dim, dim, bias = False, device=device)\n",
         "\n",
         "        self.linear = nn.Sequential(OrderedDict([\n",
         "                              ('l1', torch.nn.Linear(dim, n_linear_2, device=device)),\n",
@@ -4266,7 +4266,12 @@
         "        V = self.wv(X)\n",
         "\n",
         "        scores = torch.matmul(Q, K.permute(0, 2, 1))\n",
-        "        #mask scores\n",
+        "        \n",
+        "        #causal mask\n",
+        "        mask = torch.ones((self.L, self.L), dtype=torch.bool)\n",
+        "        mask = torch.triu(mask, diagonal=1)\n",
+        "        scores[:, mask] = -1000000\n",
+        "\n",
         "        probs = torch.nn.functional.softmax(scores, dim=0)\n",
         "        E = torch.matmul(probs, V)\n",
         "        E = self.wo(E)\n",
@@ -4274,7 +4279,7 @@
         "\n",
         "        return out"
       ],
-      "execution_count": 20,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -4293,7 +4298,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a45c4822-c6ed-4aeb-98e2-162039b77b4d"
+        "outputId": "eb68f5e2-2068-47f6-92b8-735ed0cf6657"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -4310,7 +4315,7 @@
         "print(f'sample_input.shape: {sample_input.shape}')\n",
         "print(f'sample_output.shape: {sample_output.shape}')"
       ],
-      "execution_count": 21,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -4329,13 +4334,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5557ae3-f538-45a9-d093-f668bddf7e72"
+        "outputId": "428307f7-cdc8-4361-ac99-adb14f2161a4"
       },
       "source": [
         "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "print(f'Number of model parameters: {num_params}')"
       ],
-      "execution_count": 22,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -4401,15 +4406,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d3fc1363-a707-4f03-85e5-b75b44b1f6b7"
+        "outputId": "1d9e10af-fe83-4101-e9ec-386a20ce7bf4"
       },
-      "execution_count": 23,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "my perplexity:              29902\n",
+            "my perplexity:              29712\n",
             "correct initial perplexity: 29794\n",
             "Passou o no assert da perplexidade\n"
           ]
@@ -4428,7 +4433,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zIMSaY-UUGUE"
+        "id": "zIMSaY-UUGUE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ed45720-ed53-4840-aaa4-545553f05e3e"
       },
       "source": [
         "max_examples = 150_000_000\n",
@@ -4497,7 +4506,16 @@
         "            break"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 steps; 0 examples so far; train ppl: 29991.95, valid ppl: 29834.89\n",
+            "10000 steps; 640000 examples so far; train ppl: 1270.90, valid ppl: 927.19\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
